--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,18 @@
 /*color*/
 
+.nav-underline .nav-link.active, .nav-underline .show>.nav-link, .nav-link:hover, a{
+    color: #ec9208 !important;
+    font-weight: normal;
+}
+.bouton{
+    color: #ffffff !important;
+    background-color: #ec9208 !important;
+}
 .orange{
     color:#ec9208;
+}
+.fond{
+    background-color: #ec9208;
 }
 .vert-clair{
     color:#c1cd67;
@@ -10,28 +21,23 @@
     color:#264b1f;
 }
 /* background */
-.bonjour{
-    background-color: rgb(245, 242, 238);
+.right{
+    text-align: end;
 }
-.what{
-    background-color: rgb(209, 245, 247);
+.left{
+    text-align: start;
 }
-.choice{
-    background-color: #f7f8ec;
-}
-.why{
-    background-color: rgb(250, 232, 245);
-}
+
 /*police*/
 
-.titre{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+h1, h2{
+    font-family:'Cookie', cursive;
 }
 p{
-    font-family:'Courier New', Courier, monospace;
+    font-family:'Roboto', sans-serif;
 }
 .avis{
-    font-family: fantasy;
+    font-family: 'Farsan', cursive;
 }
 .login{
     position:absolute;
@@ -43,6 +49,40 @@ p{
     top: 25px;
     right: 90px;
 }
-footer, p{
+footer{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/*etoile et avis*/
+
+.star:hover {
+	cursor: pointer;
+}
+
+.stargrey {
+	color: #96969d;
+}
+.stars {
+	margin: 0px;
+	text-align: center;
+}
+/*login*/
+.cercle_admin{
+    display:table-cell;
+    vertical-align:middle;
+    background: #264b1f;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    color: white;
+    text-align: center;
+}
+.cercle_patient{
+    display:table-cell;
+    vertical-align:middle;
+    background: #ec9208;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    color: rgb(20, 20, 20);
+    text-align: center;
 }
