--- a/assets/style.css
+++ b/assets/style.css
@@ -79,8 +79,8 @@ footer{
 .cercle_patient{
     display:table-cell;
     vertical-align:middle;
-    background: #ec9208;
-    border-radius: 50%;
+    background: #c1cd67;
+    border-radius: 50px;
     width: 50px;
     height: 50px;
     color: rgb(20, 20, 20);
